# TaskForge-

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt  taskforge.db
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 7430c1d3776e_create_tasks_table.py  9fbb9ee994ac_add_role_to_users.py  e65e19e9a4b3_add_users_table.py  f52ff6ffd420_initial_schema.py  fc538e4a207c_add_role_to_users.py
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/v1/: __init__.py  admin.py  auth.py  router.py
backend/app/api/v1/endpoints/: health.py  tasks.py
backend/app/application/: __init__.py
backend/app/application/schemas/: task.py
backend/app/application/services/: task_service.py
backend/app/core/: dependencies.py  jwt.py  settings.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: task.py
backend/app/domain/repositories/: task_repository.py
backend/app/infrastructure/database/: database.py  models.py  user_model.py
backend/app/infrastructure/repositories/: in_memory_task_repository.py  sqlalchemy_task_repository.py
backend/app/schemas/: user_schema.py
backend/app/services/: user_service.py
tests/: conftest.py  test_health.py
tests/api/: test_health.py  test_tasks.py
